# libcamera-gsoc

./: .gitignore
include/libcamera/: framebuffer.h
src/apps/qcam/: viewfinder_gl.cpp
src/libcamera/: formats.cpp  meson.build
src/libcamera/pipeline/simple/: Texture.cpp  Texture.h  converter.h  converter_gl.cpp  converter_gl.h  meson.build  shader.cpp  shader.h  shaderClass.cpp  shaderClass.h  simple.cpp  texture.cpp  texture.h
src/libcamera/pipeline/simple/shader/: bayer_8.vert  default.frag  default.vert  fixed-color.frag  identity.vert
src/qcam/: viewfinder_gl.cpp
