# SPDX-License-Identifier: CC0-1.0

libcamera_sources += files([
    'Texture.cpp',
    'ShaderClass.cpp',
    'converter_gl.cpp',
    'converter.cpp',
    'simple.cpp',
])

libgbm = dependency('gbm', required : true)
libegl = dependency('egl', required : true)
libgl = dependency('gl', required : true)
libglew = dependency('glew', required : true)